<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDarkGrey"
    android:gravity="center_vertical"
    android:padding="@dimen/dp5">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingRight="@dimen/dp5"
        android:text="@string/product"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp12" />

    <TextView
        android:id="@+id/tvQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:paddingRight="@dimen/dp5"
        android:text="@string/quantity"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp12" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:paddingRight="@dimen/dp5"
        android:text="@string/price"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp12" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/amount"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp12" />
</LinearLayout>