<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fragments.DeliveryScheduleFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/draw_bg_et"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp10"
        android:paddingLeft="@dimen/dp10"
        android:paddingRight="@dimen/dp10"
        android:paddingTop="@dimen/dp5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delivery_date"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp20"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:text="@string/delivery_time"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp20"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/llDeliveryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp5"
                    android:background="@drawable/draw_btn_bg_primary"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp10"
                    android:paddingLeft="@dimen/dp16"
                    android:paddingRight="@dimen/dp16"
                    android:paddingTop="@dimen/dp10">

                    <ImageView
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp5"
                        android:padding="@dimen/dp2"
                        android:src="@drawable/ic_calender" />

                    <TextView
                        android:id="@+id/tvDeliveryDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_00_0000"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp14"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgDeliveryTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rbAnyTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/any_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp14" />

                <RadioButton
                    android:id="@+id/rbMorning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_08_00_am_12_00_pm"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp14" />

                <RadioButton
                    android:id="@+id/rbEvening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_04_00_pm_08_00_pm"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp14" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirmAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/draw_bg_get_started"
        android:gravity="center"
        android:paddingLeft="@dimen/dp16"
        android:paddingTop="@dimen/dp10"
        android:paddingRight="@dimen/dp16"
        android:paddingBottom="@dimen/dp10"
        android:text="@string/confirm_address"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp14" />
</LinearLayout>

