<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp5"
    android:background="@drawable/draw_bg_et"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp10"
    android:paddingLeft="@dimen/dp20"
    android:paddingTop="@dimen/dp5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="@dimen/dp20">

        <ImageView
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/sp10"
            android:src="@drawable/ic_order_number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_number"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOrderNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:text="0000"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:src="@drawable/ic_calender_gray" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20"
            android:text="@string/_00_00_0000"
            android:textColor="@color/colorMedGrey"
            android:textSize="@dimen/sp14"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:src="@drawable/ic_time_gray" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_00_00"
            android:textColor="@color/colorMedGrey"
            android:textSize="@dimen/sp14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp5"
            android:background="@drawable/draw_bg_my_order_status"
            android:gravity="center"
            android:paddingBottom="@dimen/dp5"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp10"
            android:paddingTop="@dimen/dp5"
            android:text="@string/status"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancelOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/colorTransparent"
        android:gravity="center"
        android:paddingRight="@dimen/dp10"
        android:text="@string/cancel_order"
        android:textAllCaps="true"
        android:textColor="@color/colorBGGetStarted"
        android:textSize="@dimen/sp14"
        android:visibility="visible" />

</LinearLayout>