<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:background="@drawable/draw_bg_message_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivSuccess"
                    android:layout_width="@dimen/dp240"
                    android:layout_height="@dimen/dp240"
                    android:padding="@dimen/dp10" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp10"
                    android:text="@string/congratulation"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp20"
                    android:textStyle="bold" />

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/order_number"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvOrderNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="0"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/delivery_date_semi"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDeliveryDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/_00_00_0000"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/delivery_time_semi"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDeliveryTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/_00_00"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/payment_mode_semi"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPaymentMethod"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/cash_on_delivery"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="@string/total_amount_semi"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotalAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:layout_weight="1"
                        android:text="0"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/llRateUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/draw_btn_bg_primary"
                android:gravity="center"
                android:minHeight="@dimen/dp50"
                android:paddingBottom="@dimen/dp10"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:paddingTop="@dimen/dp10">

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:padding="@dimen/dp2"
                    android:src="@drawable/ic_rate_us" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp5"
                    android:text="@string/rate_us"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/draw_bg_get_started"
                android:minHeight="@dimen/dp50"
                android:minWidth="@dimen/dp120"
                android:paddingBottom="@dimen/dp10"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:paddingTop="@dimen/dp10"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp14" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/dp40"
        android:layout_height="@dimen/dp40"
        android:layout_alignRight="@id/llMain"
        android:layout_marginRight="@dimen/mdp20"
        android:layout_marginTop="@dimen/dp5"
        android:background="@drawable/bg_close_button"
        android:gravity="center"
        android:padding="@dimen/dp5"
        android:src="@drawable/ic_close" />

</RelativeLayout>
